[gd_scene load_steps=2 format=3 uid="uid://bneqsui6whsv1"]

[ext_resource type="Script" path="res://scripts/ui/card.gd" id="1_1"]

[node name="Card" type="Control"]
custom_minimum_size = Vector2(200, 280)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_1")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CardName" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "Card Name"
text_overrun_behavior = 3
clip_text = true

[node name="Cost" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 16
text = "5"
horizontal_alignment = 2

[node name="CardImage" type="TextureRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="ImagePlaceholder" type="ColorRect" parent="MarginContainer/VBoxContainer/CardImage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3, 0.3, 0.35, 1)

[node name="PlaceholderIcon" type="Label" parent="MarginContainer/VBoxContainer/CardImage/ImagePlaceholder"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "üÉè"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorIndicator" type="ColorRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="BottomBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TypeLabel" type="Label" parent="MarginContainer/VBoxContainer/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Character"
text_overrun_behavior = 3

[node name="PowerLabel" type="Label" parent="MarginContainer/VBoxContainer/BottomBar"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 14
text = "4000"
horizontal_alignment = 2

[node name="RarityLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "SR"
horizontal_alignment = 2

[node name="HoverEffect" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="GlowParticles" type="CPUParticles2D" parent="."]
position = Vector2(100, 140)
emitting = false
amount = 20
lifetime = 1.5
explosiveness = 0.2
randomness = 0.5
emission_shape = 3
emission_rect_extents = Vector2(90, 130)
direction = Vector2(0, -1)
spread = 30.0
gravity = Vector2(0, -50)
initial_velocity_min = 10.0
initial_velocity_max = 30.0
scale_amount_min = 2.0
scale_amount_max = 4.0
color = Color(1, 1, 0.5, 1)
